# point_optimization

./: .gitignore  CMakeLists.txt  README.txt  conanfile.txt  main.cpp  tags
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/src/lib/: lib.cpp  lib.h  math_structures.hpp
